<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".History">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/tsg_team_history"
                android:contentDescription="@string/history"
                android:adjustViewBounds="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history_desc_1"
                android:padding="16dp"
                android:justificationMode="inter_word"
                android:textSize="16sp"
                android:lineSpacingExtra="4dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history_desc_2"
                android:layout_marginTop="16dp"
                android:padding="16dp"
                android:justificationMode="inter_word"
                android:textSize="16sp"
                android:lineSpacingExtra="4dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history_desc_3"
                android:layout_marginTop="16dp"
                android:padding="16dp"
                android:justificationMode="inter_word"
                android:textSize="16sp"
                android:lineSpacingExtra="4dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history_desc_4"
                android:layout_marginTop="16dp"
                android:padding="16dp"
                android:justificationMode="inter_word"
                android:textSize="16sp"
                android:lineSpacingExtra="4dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history_desc_5"
                android:layout_marginTop="16dp"
                android:padding="16dp"
                android:justificationMode="inter_word"
                android:textSize="16sp"
                android:lineSpacingExtra="4dp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>